# HawksCapitol

./: .gitignore  AGENTS.md  README.md  SKILL.md  TESTING.md  architecture.md  plan.md  pyproject.toml  requirements.txt
.beads/: metadata.json
analytics/: __init__.py  alpha_decay.py  member_score.py  sector_heatmap.py
backtest/: datasets.py  metrics.py  pit_replay.py  simulator.py
broker/: paper_broker.py
cloud-setup/: aws-setup-systemd.md
config/: .env.example  config.yaml  members.json  sectors.json  source_registry.yaml
core/: __init__.py  alpaca_client.py  atr_sizing.py  broker_interface.py  broker_stops.py  config_loader.py  correlation_guard.py  exit_policy.py  live_mode_guard.py  live_promotion.py  models.py  order_executor.py  order_governor.py  portfolio.py  price_history.py  risk_manager.py  sample_data.py  serialization.py  source_registry.py
cron/: hawkscapitol.crontab
dashboard/: __init__.py  app.py
docs/: backtesting.md  hardening_backlog.md  live_promotion.md  scoring.md  sources.md
engine/: __init__.py  conviction.py  copy_signal.py  entry_quality.py  sell_engine.py
ingestion/: dedupe.py  normalizer.py  ocr.py  pdf_parser.py  reconciler.py  storage.py
launchd/: com.hawkscapitol.daily-report.plist  com.hawkscapitol.health-check.plist  com.hawkscapitol.ingest.plist  com.hawkscapitol.risk-check.plist  com.hawkscapitol.scan.plist  com.hawkscapitol.score.plist  com.hawkscapitol.weekly-report.plist
scheduler/: reconcile_trade_log.py  run_backtest.py  run_health_check.py  run_ingest.py  run_live_promotion_check.py  run_report.py  (+4 more)
(+60 files in other folders)
