[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hawkscapitol"
version = "0.1.0"
description = "Paper-first congressional trade copy-trading system"
requires-python = ">=3.10"

[tool.setuptools]
packages = [
  "analytics",
  "backtest",
  "broker",
  "core",
  "engine",
  "ingestion",
  "scheduler",
  "sources",
]
